tested in Notebook

--- a/docs/datasets/CGM_P11.ipynb
+++ b/docs/datasets/CGM_P11.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -298,9 +298,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -364,61 +364,61 @@
        "<CGM_Survey:  nsys=54, ref=>\n",
        "<IGMSystem: IGMSystem 00:29:13.8 13:16:04, 0.0329451, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 00:29:13.8 13:16:04, 0.039311, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 00:57:20 -22:22:56, 0.0233644, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 00:57:20 -22:22:56, 0.045619, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 03:11:55.2 -76:51:51, 0.202643, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 03:11:55.2 -76:51:51, 0.0593531, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.0964516, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.297609, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.352, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.153212, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.203022, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.36124, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.167, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.167043, NHI=0, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 00:57:20 -22:22:56, 0.0233644, NHI=13.8, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 00:57:20 -22:22:56, 0.045619, NHI=13.8, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 03:11:55.2 -76:51:51, 0.202643, NHI=15.14, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 03:11:55.2 -76:51:51, 0.0593531, NHI=13.53, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.0964516, NHI=14.64, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.297609, NHI=13.85, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.352, NHI=14.04, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.153212, NHI=13.46, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.203022, NHI=13, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.36124, NHI=15.14, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.167, NHI=15.47, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 04:07:48.4 -12:11:37, 0.167043, NHI=15.47, Z/H=0>\n",
        "<IGMSystem: IGMSystem 10:07:26.1 12:48:56, 0.0296659, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 10:07:26.1 12:48:56, 0.0092207, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 10:31:54.3 -14:16:51, 0.0508329, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.165951, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.0600208, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.0593876, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.13829, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.06438, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0646084, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0519877, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0511341, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.124102, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.0131789, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.00666757, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.0080957, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 12:29:06.7 02:03:09, 0.00620912, NHI=0, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 10:07:26.1 12:48:56, 0.0092207, NHI=13.9, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 10:31:54.3 -14:16:51, 0.0508329, NHI=14, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.165951, NHI=14.43, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.0600208, NHI=13.64, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.0593876, NHI=13.64, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 11:19:08.7 21:19:18, 0.13829, NHI=14.35, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.06438, NHI=15.73, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0646084, NHI=15.73, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0519877, NHI=15.67, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:14:17.7 14:03:13, 0.0511341, NHI=15.67, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.124102, NHI=14.78, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.0131789, NHI=13.94, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.00666757, NHI=19.3, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:19:20.9 06:38:38, 0.0080957, NHI=13.1, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 12:29:06.7 02:03:09, 0.00620912, NHI=15.38, Z/H=0>\n",
        "<IGMSystem: IGMSystem 12:33:25.8 09:31:23, 0.0118122, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 12:33:25.8 09:31:23, 0.125431, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 12:33:25.8 09:31:23, 0.0905207, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 12:33:25.8 09:31:23, 0.206801, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.191709, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.0935802, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.0425621, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.145303, NHI=0, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.191709, NHI=15.01, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.0935802, NHI=15.35, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.0425621, NHI=14.83, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 13:05:33 -10:33:19, 0.145303, NHI=15.29, Z/H=0>\n",
        "<IGMSystem: IGMSystem 13:09:47 08:19:49, 0.127621, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 13:09:47 08:19:49, 0.0337313, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 14:29:06.4 01:17:06, 0.0299413, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 14:29:06.4 01:17:06, 0.0281113, NHI=0, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 14:29:06.4 01:17:06, 0.0299413, NHI=13.1, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 14:29:06.4 01:17:06, 0.0281113, NHI=13.67, Z/H=0>\n",
        "<IGMSystem: IGMSystem 15:55:43 11:11:24, 0.0150682, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 15:55:43 11:11:24, 0.0395311, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 15:55:43 11:11:24, 0.0420751, NHI=0, Z/H=0>\n",
        "<IGMSystem: IGMSystem 15:55:43 11:11:24, 0.0416811, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.13262, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0503651, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.155532, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0807993, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0788036, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0809754, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0516533, NHI=0, Z/H=0>\n",
-       "<IGMSystem: IGMSystem 21:58:51.8 -30:13:30, 0.0169383, NHI=0, Z/H=0>"
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.13262, NHI=14.3, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0503651, NHI=14.08, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.155532, NHI=13.06, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0807993, NHI=15.11, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0788036, NHI=14.29, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0809754, NHI=15.11, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:55:01.5 -09:22:25, 0.0516533, NHI=14.08, Z/H=0>\n",
+       "<IGMSystem: IGMSystem 21:58:51.8 -30:13:30, 0.0169383, NHI=13.56, Z/H=0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -456,13 +456,48 @@
        "            271.77462491, 108.99879108] kpc>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p11.rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  0.        ,   0.        ,  13.80000019,  13.80000019,\n",
+       "        15.14000034,  13.52999973,  14.64000034,  13.85000038,\n",
+       "        14.03999996,  13.46000004,  13.        ,  15.14000034,\n",
+       "        15.47000027,  15.47000027,   0.        ,  13.89999962,\n",
+       "        14.        ,  14.43000031,  13.64000034,  13.64000034,\n",
+       "        14.35000038,  15.72999954,  15.72999954,  15.67000008,\n",
+       "        15.67000008,  14.77999973,  13.93999958,  19.29999924,\n",
+       "        13.10000038,  15.38000011,   0.        ,   0.        ,\n",
+       "         0.        ,   0.        ,  15.01000023,  15.35000038,\n",
+       "        14.82999992,  15.28999996,   0.        ,   0.        ,\n",
+       "        13.10000038,  13.67000008,   0.        ,   0.        ,\n",
+       "         0.        ,   0.        ,  14.30000019,  14.07999992,\n",
+       "        13.06000042,  15.10999966,  14.28999996,  15.10999966,\n",
+       "        14.07999992,  13.56000042])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p11.NHI"
    ]
   },
   {
