--- a/docs/datasets/XQ100_systems.ipynb
+++ b/docs/datasets/XQ100_systems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to organize Ingestion of XQ100 datasets (v1.1)"
+    "# Notebook to organize Ingestion of XQ100 datasets (v1.2)"
    ]
   },
   {
@@ -252,6 +252,57 @@
    "source": [
     "xq100_dla_zabs = xq100_dla.zabs\n",
     "xq100_dla_zabs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Table 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=5&gt;\n",
+       "<table id=\"table4616766224\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>z</th><th>Dz</th><th>sumDX</th><th>nabs</th><th>lx</th><th>bmlxlci_68.3</th><th>bmlxhci_68.3</th><th>bmlxlci_95.0</th><th>bmlxhci_95.0</th><th>Omega</th><th>bmOlci_68.3</th><th>bmOhci_68.3</th><th>bmOlci_95.0</th><th>bmOhci_95.0</th></tr></thead>\n",
+       "<thead><tr><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
+       "<tr><td>2.15</td><td>0.831</td><td>965</td><td>62</td><td>0.064</td><td>0.056</td><td>0.072</td><td>0.049</td><td>0.081</td><td>0.543</td><td>0.506</td><td>0.753</td><td>0.432</td><td>0.983</td></tr>\n",
+       "<tr><td>2.16</td><td>0.831</td><td>997</td><td>64</td><td>0.064</td><td>0.056</td><td>0.072</td><td>0.049</td><td>0.081</td><td>0.53</td><td>0.494</td><td>0.729</td><td>0.422</td><td>0.948</td></tr>\n",
+       "<tr><td>2.17</td><td>0.83</td><td>1023</td><td>66</td><td>0.064</td><td>0.057</td><td>0.072</td><td>0.05</td><td>0.081</td><td>0.527</td><td>0.489</td><td>0.727</td><td>0.422</td><td>0.94</td></tr>\n",
+       "<tr><td>2.18</td><td>0.827</td><td>1094</td><td>68</td><td>0.062</td><td>0.055</td><td>0.07</td><td>0.048</td><td>0.078</td><td>0.532</td><td>0.495</td><td>0.721</td><td>0.425</td><td>0.917</td></tr>\n",
+       "<tr><td>2.19</td><td>0.826</td><td>1140</td><td>68</td><td>0.06</td><td>0.052</td><td>0.067</td><td>0.046</td><td>0.075</td><td>0.511</td><td>0.476</td><td>0.695</td><td>0.407</td><td>0.885</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=5>\n",
+       "   z       Dz   sumDX  nabs ... bmOlci_68.3 bmOhci_68.3 bmOlci_95.0 bmOhci_95.0\n",
+       "float64 float64 int64 int64 ...   float64     float64     float64     float64  \n",
+       "------- ------- ----- ----- ... ----------- ----------- ----------- -----------\n",
+       "   2.15   0.831   965    62 ...       0.506       0.753       0.432       0.983\n",
+       "   2.16   0.831   997    64 ...       0.494       0.729       0.422       0.948\n",
+       "   2.17    0.83  1023    66 ...       0.489       0.727       0.422        0.94\n",
+       "   2.18   0.827  1094    68 ...       0.495       0.721       0.425       0.917\n",
+       "   2.19   0.826  1140    68 ...       0.476       0.695       0.407       0.885"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab7_fil = pyigm.__path__[0]+'/data/DLA/XQ-100/sramirez16_table7.dat'\n",
+    "tab7 = Table.read(tab7_fil, format='ascii')\n",
+    "tab7[0:5]"
    ]
   },
   {
