--- a/docs/datasets/Blind_CIV.ipynb
+++ b/docs/datasets/Blind_CIV.ipynb
@@ -58,7 +58,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4568268304\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4621870480\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>z_abs</th><th>ion</th><th>log_N</th><th>log_N_err</th><th>b_dop</th><th>b_dop_err</th><th>vel</th><th>vel_err</th><th>flag</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float64</th><th>str6</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>PG1522+101</td><td>0.07523</td><td>C IV</td><td>13.56</td><td>0.05</td><td>9</td><td>2</td><td>-6</td><td>1</td><td>0</td></tr>\n",
@@ -304,6 +304,72 @@
    "metadata": {},
    "source": [
     "### Read the sightline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pg1407_dict = ltu.loadjson('PG1407+265_sl.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/xavier/local/Python/pyigm/pyigm/igm/igmsightline.py(43)from_dict()\n",
+      "-> \n",
+      "(Pdb) c\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IGMSightline: 14:09:23.897 +26:18:21.043, zem=0.940000>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pg1407 = IGMSightline.from_dict(pg1407_dict)\n",
+    "pg1407"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<AbsComponent: 14:09:23.897 +26:18:21.043, Name=HI_z0.07227, Zion=(1,1), Ej=0 1 / cm, z=0.07227, vlim=-14140.7 km / s,14140.7 km / s, logN=0, sig_N=0, flag_N=3>,\n",
+       " <AbsComponent: 14:09:23.897 +26:18:21.043, Name=CIV_z0.07221, Zion=(6,4), Ej=0 1 / cm, z=0.0722092, vlim=-31.1127 km / s,31.1127 km / s, logN=13.47, sig_N=0.04, flag_N=1>]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pg1407._components"
    ]
   },
   {
