Blind CIV ingested

--- a/docs/datasets/Blind_CIV.ipynb
+++ b/docs/datasets/Blind_CIV.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Blind CIV Survey by Burchett et al."
+    "# Blind CIV Survey by Burchett et al. [v1.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -44,12 +44,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read Table"
+    "## Read Component Table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4621870480\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4607047248\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>z_abs</th><th>ion</th><th>log_N</th><th>log_N_err</th><th>b_dop</th><th>b_dop_err</th><th>vel</th><th>vel_err</th><th>flag</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float64</th><th>str6</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>PG1522+101</td><td>0.07523</td><td>C IV</td><td>13.56</td><td>0.05</td><td>9</td><td>2</td><td>-6</td><td>1</td><td>0</td></tr>\n",
@@ -80,7 +80,7 @@
        "PG1407+265 0.07227  H I     0.0       0.0  9999      9999     0       0     9"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,13 +93,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "flag_dict = {0:1, 1:2, 3:2, 9: 3}"
+    "flag_dict = {0:1, 1:2, 3:2, 9: 3, -99: 3}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read RA/DEC Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "blindradec_file = pyigm.__path__[0]+'/data/sightlines/Blind_CIV/BlindCIV_QSOs_FullCoords.dat'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=3&gt;\n",
+       "<table id=\"table4608195152\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>QSO</th><th>QSOlong</th><th>RA</th><th>DEC</th><th>zQSO</th><th>CoordString</th></tr></thead>\n",
+       "<thead><tr><th>str10</th><th>str19</th><th>float64</th><th>float64</th><th>float64</th><th>str19</th></tr></thead>\n",
+       "<tr><td>J0012-1022</td><td>001224.01-102226.5</td><td>3.1001</td><td>-10.374</td><td>0.228</td><td>001224.02-102226.40</td></tr>\n",
+       "<tr><td>J0809+4619</td><td>080908.13+461925.6</td><td>122.2839</td><td>46.3238</td><td>0.657</td><td>080908.14+461925.68</td></tr>\n",
+       "<tr><td>J0826+0742</td><td>082633.51+074248.3</td><td>126.6396</td><td>7.7134</td><td>0.311</td><td>082633.50+074248.24</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=3>\n",
+       "   QSO          QSOlong          RA      DEC     zQSO      CoordString    \n",
+       "  str10          str19        float64  float64 float64        str19       \n",
+       "---------- ------------------ -------- ------- ------- -------------------\n",
+       "J0012-1022 001224.01-102226.5   3.1001 -10.374   0.228 001224.02-102226.40\n",
+       "J0809+4619 080908.13+461925.6 122.2839 46.3238   0.657 080908.14+461925.68\n",
+       "J0826+0742 082633.51+074248.3 126.6396  7.7134   0.311 082633.50+074248.24"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blindciv_radec = Table.read(blindradec_file, format='ascii')\n",
+    "blindciv_radec[0:3]"
    ]
   },
   {
@@ -373,13 +430,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Full Sample"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "out_path = pyigm.__path__[0]+'/data/sightlines/Blind_CIV/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J001224.02-102226.40.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J080908.14+461925.68.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J082633.50+074248.24.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J084349.49+411741.64.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J091235.42+295725.56.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J092554.43+453544.52.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J092909.79+464424.00.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J094621.26+471131.20.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J094733.22+100508.88.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J094952.92+390203.84.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J100102.54+594414.28.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J105151.43-005117.64.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J105945.24+144143.08.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J105958.82+251708.88.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J110312.94+414154.96.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J110406.94+314111.40.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J111754.31+263416.68.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J112114.21+032546.92.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J120442.10+275411.88.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J120721.00+262429.16.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J121114.57+365739.60.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J132704.13+443504.92.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J134206.58+050524.00.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J134231.22+382903.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J145108.76+270927.00.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J152139.67+033729.28.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J135625.56+251523.76.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J154553.50+093620.52.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J121037.56+315706.12.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J015530.02-085703.96.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J025937.46+003736.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J095915.65+050355.08.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J134246.90+184443.80.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J031027.82-004950.88.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J024250.86-075914.28.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J135712.62+170444.04.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J021218.34-073719.92.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J112244.88+575542.96.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J133053.28+311930.72.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J113457.62+255527.84.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J123604.03+264135.88.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J004222.29-103743.79.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J022614.47+001529.77.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J040148.98-054056.57.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J080359.23+433258.42.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J082024.22+233450.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J091029.76+101413.60.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J091440.39+282330.62.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J092554.71+400414.12.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J092837.98+602521.00.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J093518.19+020415.53.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J094331.62+053131.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J095000.74+483129.39.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J100902.07+071343.86.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J101622.60+470643.34.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J102218.99+013218.82.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J111239.11+353928.22.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J113327.79+032719.19.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J115758.73-002220.86.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J122035.10+385316.44.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J123335.08+475800.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J123304.05-003134.18.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J124154.02+572107.38.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J124511.26+335610.14.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J132222.68+464535.21.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J133045.15+281321.50.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J134251.61-005345.31.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J141910.20+420746.92.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J143511.53+360437.24.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J143726.14+504555.84.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J144511.28+342825.46.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J151428.65+361957.97.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J155048.30+400144.90.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J155304.92+354828.62.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J155504.40+362848.04.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J161649.42+415416.38.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J161711.42+063833.50.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J161916.55+334238.41.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J225738.20+134045.48.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J234500.43-005936.06.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J023507.38-040205.67.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J075112.31+291938.36.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J115120.46+543733.08.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J120858.01+454035.47.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J134100.78+412314.08.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J140923.91+261821.10.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J143748.28-014710.78.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J152424.53+095829.12.json\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/sightlines/Blind_CIV/J163201.12+373750.01.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "for qso in blindciv_radec:\n",
+    "    # Match to component table\n",
+    "    idx = np.where(blind_tbl['QSO'] == qso['QSO'])[0]\n",
+    "    coord = ltu.radec_to_coord('J'+qso['CoordString'])\n",
+    "    # \n",
+    "    comps = []\n",
+    "    for row in blind_tbl[idx]:\n",
+    "        # Calculate redshift\n",
+    "        zabs= row['z_abs'] + (1+row['z_abs'])*row['vel']/c_kms\n",
+    "        # Generate\n",
+    "        comp = AbsComponent(coord, name_ion(row['ion']), zabs, np.sqrt(2)*row['b_dop']*np.array([-1,1])*u.km/u.s,\n",
+    "                           Ntup=(flag_dict[row['flag']], row['log_N'], row['log_N_err']))\n",
+    "        # Parse b-values\n",
+    "        comp.bval = row['b_dop']*u.km/u.s\n",
+    "        comp.sig_bval = row['b_dop_err']*u.km/u.s\n",
+    "        # Append\n",
+    "        comps.append(comp)\n",
+    "    # Sightline\n",
+    "    sl = IGMSightline(coord, qso['zQSO'])\n",
+    "    sl._components = comps\n",
+    "    # Write\n",
+    "    sl_dict = sl.to_dict()\n",
+    "    outfile = out_path+'J{:s}.json'.format(qso['CoordString'])\n",
+    "    ltu.savejson(outfile, sl_dict, easy_to_read=True, overwrite=True)\n",
+    "    print(\"Wrote: {:s}\".format(outfile))"
+   ]
   }
  ],
  "metadata": {
