--- a/docs/datasets/Blind_CIV.ipynb
+++ b/docs/datasets/Blind_CIV.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table4607047248\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4599612176\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>z_abs</th><th>ion</th><th>log_N</th><th>log_N_err</th><th>b_dop</th><th>b_dop_err</th><th>vel</th><th>vel_err</th><th>flag</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float64</th><th>str6</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th></tr></thead>\n",
        "<tr><td>PG1522+101</td><td>0.07523</td><td>C IV</td><td>13.56</td><td>0.05</td><td>9</td><td>2</td><td>-6</td><td>1</td><td>0</td></tr>\n",
@@ -80,7 +80,7 @@
        "PG1407+265 0.07227  H I     0.0       0.0  9999      9999     0       0     9"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=3&gt;\n",
-       "<table id=\"table4608195152\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table4599611472\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>QSOlong</th><th>RA</th><th>DEC</th><th>zQSO</th><th>CoordString</th></tr></thead>\n",
        "<thead><tr><th>str10</th><th>str19</th><th>float64</th><th>float64</th><th>float64</th><th>str19</th></tr></thead>\n",
        "<tr><td>J0012-1022</td><td>001224.01-102226.5</td><td>3.1001</td><td>-10.374</td><td>0.228</td><td>001224.02-102226.40</td></tr>\n",
@@ -149,7 +149,7 @@
        "J0826+0742 082633.51+074248.3 126.6396  7.7134   0.311 082633.50+074248.24"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -228,7 +228,7 @@
        "<IGMSightline: 14:09:23.897 +26:18:21.043, zem=0.940000>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -263,7 +263,7 @@
        " <AbsComponent: 14:09:23.897 +26:18:21.043, Name=HI_z0.07227, Zion=(1,1), Ej=0 1 / cm, z=0.07227, vlim=-14140.7 km / s,14140.7 km / s, logN=0, sig_N=0, flag_N=3>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -303,12 +303,14 @@
        "{'CreationDate': '2016-Nov-17',\n",
        " 'DEC': 26.305845277777777,\n",
        " 'RA': 212.3495708333333,\n",
+       " u'class': 'IGMSightline',\n",
        " u'components': {u'CIV_z0.07221': {'A': None,\n",
        "   'DEC': 26.305845277777777,\n",
        "   'Ej': 0.0,\n",
        "   'Name': u'CIV_z0.07221',\n",
        "   'RA': 212.3495708333333,\n",
        "   'Zion': (6, 4),\n",
+       "   u'class': 'AbsComponent',\n",
        "   'comment': u'',\n",
        "   'flag_N': 1,\n",
        "   u'lines': {},\n",
@@ -322,6 +324,7 @@
        "   'Name': u'HI_z0.07227',\n",
        "   'RA': 212.3495708333333,\n",
        "   'Zion': (1, 1),\n",
+       "   u'class': 'AbsComponent',\n",
        "   'comment': u'',\n",
        "   'flag_N': 3,\n",
        "   u'lines': {},\n",
@@ -336,7 +339,7 @@
        " 'zem': 0.94}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -440,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -451,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -579,6 +582,15 @@
     "    ltu.savejson(outfile, sl_dict, easy_to_read=True, overwrite=True)\n",
     "    print(\"Wrote: {:s}\".format(outfile))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
