--- a/docs/datasets/Blind_CIV.ipynb
+++ b/docs/datasets/Blind_CIV.ipynb
@@ -99,7 +99,7 @@
    },
    "outputs": [],
    "source": [
-    "flag_dict = {0:1, 1:2, 3:2, 9: 3, -99: 3}"
+    "flag_dict = {0:1, 1:2, 3:2, 9: 9999, -99: 3}"
    ]
   },
   {
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -563,10 +563,20 @@
     "    # \n",
     "    comps = []\n",
     "    for row in blind_tbl[idx]:\n",
+    "        if row['flag'] == 9:  # junk (e.g. blend)\n",
+    "            continue\n",
     "        # Calculate redshift\n",
-    "        zabs= row['z_abs'] + (1+row['z_abs'])*row['vel']/c_kms\n",
+    "        if row['flag'] in [3,-99]:\n",
+    "            zabs= row['z_abs'] \n",
+    "        else:\n",
+    "            zabs= row['z_abs'] + (1+row['z_abs'])*row['vel']/c_kms\n",
+    "        # vlim\n",
+    "        if row['b_dop_err'] > 9000.:\n",
+    "            vlim = np.array([-100.,100.])*u.km/u.s\n",
+    "        else:\n",
+    "            vlim = np.sqrt(2)*row['b_dop']*np.array([-1,1])*u.km/u.s\n",
     "        # Generate\n",
-    "        comp = AbsComponent(coord, name_ion(row['ion']), zabs, np.sqrt(2)*row['b_dop']*np.array([-1,1])*u.km/u.s,\n",
+    "        comp = AbsComponent(coord, name_ion(row['ion']), zabs, vlim,\n",
     "                           Ntup=(flag_dict[row['flag']], row['log_N'], row['log_N_err']))\n",
     "        # Parse b-values\n",
     "        comp.bval = row['b_dop']*u.km/u.s\n",
