--- a/docs/examples/Mean_Flux_Regulation.ipynb
+++ b/docs/examples/Mean_Flux_Regulation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Examples with Mean_Flux_Regulation"
+    "# Examples with Mean-Flux Regulation (following K-G Lee) [v1.0]"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,8 @@
     "\n",
     "from pyigm.fN import mockforest as pyimock\n",
     "from pyigm.fN.fnmodel import FNModel\n",
-    "from pyigm.igm import mfr as py_mfr"
+    "from pyigm.igm import mfr as py_mfr\n",
+    "from pyigm.fN import tau_eff as py_teff"
    ]
   },
   {
@@ -1711,7 +1712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -1722,7 +1723,7 @@
        "<mflux_tauevo(p0=0.9760194990734268, p1=-1.6508431495185911, zqso=2.5, lamb_piv=1113.0)>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2558,6 +2559,75 @@
    ],
    "source": [
     "show_fit(flux_spec, new_conti)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#dum_spec = flux_spec.copy()\n",
+    "#dum_spec.flux = new_flux\n",
+    "#dum_spec.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.15316449, 0.16624880750824203)"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub_wv = (flux_spec.wavelength.value > 3800) & (flux_spec.wavelength.value < 4100) \n",
+    "DA = np.mean(1-new_flux[sub_wv])\n",
+    "teff = -1*np.log(1-DA)\n",
+    "DA, teff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.249237046237877, 0.17246575837772948)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zlya = (4100+3800)/2./1215.67 - 1.\n",
+    "avg_teff = py_teff.lyman_alpha_obs(zlya)\n",
+    "zlya, avg_teff"
    ]
   },
   {
@@ -3490,7 +3560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -3503,7 +3573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -3514,7 +3584,7 @@
        "<mflux_tauevo(p0=0.958680540449373, p1=-1.9658730579503034, zqso=2.5, lamb_piv=1113.0)>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3525,7 +3595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -4311,15 +4381,6 @@
     "dla_conti = py_mfr.mfluxcorr(lambda_r,parm3.p0.value, parm3.p1.value,lamb_piv=parm3.lamb_piv.value)\n",
     "show_fit(dla_spec, new_conti, another_conti=dla_conti)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
